--- a/index.html
+++ b/index.html
@@ -221,16 +221,16 @@
 										</div>
 									</div>
 									
-									<!--div class="col-md-6">
+									<div class="col-md-6">
 										<div class="single_blogs_img">
-											<img src="assets/images/vlog/creative.jpg" alt="" />
-											<div class="dates"><span>22</span> Mar 2019</div>
+											<img src="assets/images/vlog/enterpreunear.jpg" alt="" />
+											<div class="dates"><span>27</span> Mar 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.instagram.com/p/BvT5E8HB7gu/">Creative Software Company Field Visit</a></h5>
+											<h5><a href="https://www.instagram.com/p/BvoWLayBUVS/">Venture Frontier Lanka<br> Entrepreneurship Caravan</a></h5>
 											<p></p>
 										</div>
-									</div-->
+									</div>
 										
 									</div>
 								</div>
