--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 							<div class="col-md-5 col-md-offset-7">
 								<div class="single_coolautumn text-right wow fadeInLeft" data-wow-duration="1.5s">
 									<div class="date">16/03/2019</div>
-									<h3>Rolling ball Mini Game</h3>
+									<h3>Rolling ball Game</h3>
 									<blockquote class="blockquote-reverse">
 										<p>This game was created by me for fun,I followed Youtube tutorial for take basic idea and create my own game,Using my own ideas</p>
 									</blockquote>
