--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<h2>Hello!</h2>
 							<div class="separator"></div>
 							<p>I'm <i><b>Janidu Jayasanka</b></i>.</p>
-							<a href="https://1drv.ms/u/s!Aq5q9prmEGvXhDSk2UAOh5fN4v5S" target="_blank" class="btn btn-lg">Download CV</a>
+							<a href="https://1drv.ms/b/s!Aq5q9prmEGvXhhT2AGwVL6RRkKDA" target="_blank" class="btn btn-lg">Download CV</a>
 						</div>
 						  
 						
