--- a/index.html
+++ b/index.html
@@ -436,15 +436,15 @@
 						<div class="main_blogs">
 							<div class="main_blogs_content">
 								<div class="col-sm-6">
-									<div class="single_blogs"><!--
+									<div class="single_blogs">
 										<div class="single_blogs_img">
-											<img src="assets/images/blog/blog7.png" alt="" />
-											<div class="dates"><span>04</span> Jun 2019</div>
+											<img src="assets/images/blog/sef.png" alt="" />
+											<div class="dates"><span>09</span> Jun 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://medium.com/@johnnyluther96/how-to-fix-operating-system-not-found-error-64f39b5b398b?source=friends_link&sk=2d6370c8a1fc1c8d6789b2101248f185">How To Fix Operating System Not Found error</a></h5>
-											<p>Fist of all ,I have to say this only for Windows base operating systems(7/vista/8/8.1/10).If you know your computer not formated or anything else happen ; That means your computer still have OS inside but not in the active mode...</p>
-										</div>-->
+											<h5><a href="https://medium.com/@johnnyluther96/i-met-dr-jeewika-ranaweera-dfaa207c489b?source=friends_link&sk=4609e69ac134d6ca381de6a9b11c1bf9">First meeting with Dr. Jeewika</a></h5>
+											<p>Hey guys, I’m back to share my experience on ScholarX mentoring program. Last time I mentioned that I was hoping to meet Dr. Jeewika Ranaweera, who is my mentor. I met her last Thursday(6th of June )...</p>
+										</div>
 									</div>
 								</div>	
 								
