--- a/index.html
+++ b/index.html
@@ -437,6 +437,33 @@
 							<div class="main_blogs_content">
 								<div class="col-sm-6">
 									<div class="single_blogs">
+										<!--div class="single_blogs_img">
+											<img src="assets/images/blog/sef.png" alt="" />
+											<div class="dates"><span>09</span> Jun 2019</div>
+										</div>
+										<div class="single_blogs_deatels">
+											<h5><a href="https://medium.com/@johnnyluther96/i-met-dr-jeewika-ranaweera-dfaa207c489b?source=friends_link&sk=4609e69ac134d6ca381de6a9b11c1bf9">First meeting with Dr. Jeewika</a></h5>
+											<p>Hey guys, I’m back to share my experience on ScholarX mentoring program. Last time I mentioned that I was hoping to meet Dr. Jeewika Ranaweera, who is my mentor. I met her last Thursday(6th of June )...</p>
+										</div-->
+									</div>
+								</div>	
+								
+								<div class="col-sm-6">
+									<div class="single_blogs">
+										<div class="single_blogs_img">
+											<img src="assets/images/blog/US attack.png" alt="iran hacked" />
+											<div class="dates"><span>26</span> Jun 2019</div>
+										</div>
+										<div class="single_blogs_deatels">
+											<h5><a href="https://medium.com/@johnnyluther96/i-have-selected-to-sef-scholarx-mentoring-program-fee21dc99661?source=friends_link&sk=66c1885d6c1d32f5dfa5d449df72a626">U.S. launched cyber-attacks on Iranian military computer systems</a></h5>
+											<p>The U.S. Cyber Command reportedly launched a cyber-attack against Iran last Thursday;  response to the downing of an American surveillance drone...</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="main_blogs_content">
+								<div class="col-sm-6">
+									<div class="single_blogs">
 										<div class="single_blogs_img">
 											<img src="assets/images/blog/sef.png" alt="" />
 											<div class="dates"><span>09</span> Jun 2019</div>
