--- a/index.html
+++ b/index.html
@@ -458,14 +458,14 @@
 							<div class="main_blogs_content">
 								<div class="col-sm-6">
 									<div class="single_blogs">
-										<!--div class="single_blogs_img">
-											<img src="assets/images/blog/sef.png" alt="" />
-											<div class="dates"><span>09</span> Jun 2019</div>
+										<div class="single_blogs_img">
+											<img src="assets/images/blog/intel graphics.jpg" alt="" />
+											<div class="dates"><span>03</span> Jul 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://medium.com/@johnnyluther96/i-met-dr-jeewika-ranaweera-dfaa207c489b?source=friends_link&sk=4609e69ac134d6ca381de6a9b11c1bf9">First meeting with Dr. Jeewika</a></h5>
-											<p>Hey guys, I’m back to share my experience on ScholarX mentoring program. Last time I mentioned that I was hoping to meet Dr. Jeewika Ranaweera, who is my mentor. I met her last Thursday(6th of June )...</p>
-										</div-->
+											<h5><a href="https://medium.com/@johnnyluther96/what-is-intel-xe-graphics-card-3309b811e7e2?source=friends_link&sk=7289b651bc0a4214a5f2c6329183c9b7">What is Intel Xe Graphics Card?</a></h5>
+											<p>It’s been a wild year in the graphics space, topped by Intel’s announcement that it has started a new program to launch graphics cards for both gaming and enterprise markets (purportedly code-named Arctic Sound)...</p>
+										</div>
 									</div>
 								</div>	
 								
