--- a/index.html
+++ b/index.html
@@ -457,6 +457,34 @@
 						<div class="main_blogs">
 							<div class="main_blogs_content">
 								<div class="col-sm-6">
+									<!--div class="single_blogs">
+										<div class="single_blogs_img">
+											<img src="assets/images/blog/intel graphics.jpg" alt="" />
+											<div class="dates"><span>03</span> Jul 2019</div>
+										</div>
+										<div class="single_blogs_deatels">
+											<h5><a href="https://medium.com/@johnnyluther96/what-is-intel-xe-graphics-card-3309b811e7e2?source=friends_link&sk=7289b651bc0a4214a5f2c6329183c9b7">What is Intel Xe Graphics Card?</a></h5>
+											<p>It’s been a wild year in the graphics space, topped by Intel’s announcement that it has started a new program to launch graphics cards for both gaming and enterprise markets (purportedly code-named Arctic Sound)...</p>
+										</div>
+									</div-->
+								</div>	
+								
+								<div class="col-sm-6">
+									<div class="single_blogs">
+										<div class="single_blogs_img">
+											<img src="assets/images/blog/hacking tools.jpeg" alt="" />
+											<div class="dates"><span>09</span> Aug 2019</div>
+										</div>
+										<div class="single_blogs_deatels">
+											<h5><a href="https://medium.com/@johnnyluther96/penetration-testing-hacking-tools-list-for-hackers-e1eb4e4cc507?source=friends_link&sk=c3225b3706c74f0fbb346270f06f7081">Penetration Testing & Hacking Tools List for Hackers</a></h5>
+											<p>#Hacking Tools...</p>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="main_blogs_content">
+								<div class="col-sm-6">
 									<div class="single_blogs">
 										<div class="single_blogs_img">
 											<img src="assets/images/blog/intel graphics.jpg" alt="" />
