--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 						   <div class="col-md-12">
 								<div class="about_top_content">
 									<i class="fa fa-quote-right"></i>
-									<p>I am following Computing and Information Systems Degree in Sabaragamuwa University of Sri Lanka.Currently I'm an Open Source developer and Tech geek.I interest about Machine Learning,Ciber security,Hardware and as same as Unity base Developments(Games,ARApps)also alway strive with new technologies and rends. I'm enthusiastic , with decisiveness and conviction, also I have a proactive attitude and find positive ways to stimulate and engage with people. My vision is master Cyber Security and do best for information security industry.</p>
+									<p>I am following Computing and Information Systems Degree in Sabaragamuwa University of Sri Lanka.Currently I'm an Open Source developer and Tech geek. I'm enthusiastic , with decisiveness and conviction, also I have a proactive attitude and find positive ways to stimulate and engage with people.I interest about Machine Learning,Ciber security,Hardware and as same as Unity base Developments(Games,ARApps)also alway strive with new technologies and trends.My vision is master Cyber Security and do best for information security industry.</p>
 								</div>
 								<div class="about_bottom_content">
 									<div class="about_bottom_title">
