--- a/index.html
+++ b/index.html
@@ -457,16 +457,16 @@
 						<div class="main_blogs">
 							<div class="main_blogs_content">
 								<div class="col-sm-6">
-									<!--div class="single_blogs">
+									<div class="single_blogs">
 										<div class="single_blogs_img">
-											<img src="assets/images/blog/intel graphics.jpg" alt="" />
-											<div class="dates"><span>03</span> Jul 2019</div>
+											<img src="assets/images/blog/apache phishing kit.png" alt="" />
+											<div class="dates"><span>20</span> Aug 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://medium.com/@johnnyluther96/what-is-intel-xe-graphics-card-3309b811e7e2?source=friends_link&sk=7289b651bc0a4214a5f2c6329183c9b7">What is Intel Xe Graphics Card?</a></h5>
-											<p>It’s been a wild year in the graphics space, topped by Intel’s announcement that it has started a new program to launch graphics cards for both gaming and enterprise markets (purportedly code-named Arctic Sound)...</p>
+											<h5><a href="https://medium.com/@johnnyluther96/a-new-phishing-kit-on-the-dark-net-56778859a7fe?source=friends_link&sk=006cd52c8f9e75b8ebc858bf36d9c042">A New Phishing Kit on the Dark Net</a></h5>
+											<p>Today I’m going to introduce new generation phishing kit that is call [A]pache’s phishing kit. Below we will show how [A]pache’s phishing kit works and how it is used to carry out online scamming operations...</p>
 										</div>
-									</div-->
+									</div>
 								</div>	
 								
 								<div class="col-sm-6">
