--- a/index.html
+++ b/index.html
@@ -458,6 +458,34 @@
 							<div class="main_blogs_content">
 								<div class="col-sm-6">
 									<div class="single_blogs">
+										<!--div class="single_blogs_img">
+											<img src="assets/images/blog/apache phishing kit.png" alt="" />
+											<div class="dates"><span>20</span> Aug 2019</div>
+										</div>
+										<div class="single_blogs_deatels">
+											<h5><a href="https://medium.com/@johnnyluther96/a-new-phishing-kit-on-the-dark-net-56778859a7fe?source=friends_link&sk=006cd52c8f9e75b8ebc858bf36d9c042">A New Phishing Kit on the Dark Net</a></h5>
+											<p>Today I’m going to introduce new generation phishing kit that is call [A]pache’s phishing kit. Below we will show how [A]pache’s phishing kit works and how it is used to carry out online scamming operations...</p>
+										</div-->
+									</div>
+								</div>	
+								
+								<div class="col-sm-6">
+									<div class="single_blogs">
+										<div class="single_blogs_img">
+											<img src="assets/images/blog/Vehicle.jpeg" alt="" />
+											<div class="dates"><span>08</span> Dec 2019</div>
+										</div>
+										<div class="single_blogs_deatels">
+											<h5><a href="https://medium.com/@johnnyluther96/are-all-vehicle-manufactures-going-to-next-era-ff4ebefe90d4?source=friends_link&sk=ef4df2c2e6c69d4919dc9b6d23b0800d">Are All Vehicle Manufactures Going To Next Era?</a></h5>
+											<p>As we all know Tesla company taking huge turn in automobile industry therefore all other companies should be give good compete. From that case lot of European and American companies tries to release electric vehicle.here we can see few example for that silent competition....</p>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="main_blogs_content">
+								<div class="col-sm-6">
+									<div class="single_blogs">
 										<div class="single_blogs_img">
 											<img src="assets/images/blog/apache phishing kit.png" alt="" />
 											<div class="dates"><span>20</span> Aug 2019</div>
