--- a/index.html
+++ b/index.html
@@ -331,29 +331,29 @@
 							
 						<div class="main_features wow pulse" data-wow-duration="2s">
 							<div class="main_features_content">
-								<!--<div class="single_features">
+								<div class="single_features">
 									<div class="col-md-6">
-										<div class="single_blogs_img">
+										<!--div class="single_blogs_img">
 											<img src="assets/images/vlog/adara.jpg" alt="" />
 											<div class="dates"><span>29</span> Jul</div>
 										</div>
 										<div class="single_blogs_deatels">
 											<h5><a href="https://www.instagram.com/p/BlyY5ABACSd/">Adara Kanda Night Camp</a></h5>
 											<p></p>
-										</div>
+										</div-->
 									</div>
 									
 									<div class="col-md-6">
 										<div class="single_blogs_img">
-											<img src="assets/images/vlog/habarana.jpg" alt="" />
-											<div class="dates"><span>28</span> Dec</div>
+											<img src="assets/images/vlog/code.jpeg" alt="" />
+											<div class="dates"><span>28</span> Nov 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.instagram.com/p/Br5uWinhsxk/">Habarana Tour</a></h5>
+											<h5><a href="https://www.linkedin.com/posts/janidu-jayasanka-36435a145_codenightv3-hacking-lifestyletips-activity-6607148290083512320-SEn8">Code Night 2019</a></h5>
 											<p></p>
 										</div>
 									</div>
-								</div>-->
+								</div>
 								<div class="single_features">
 									<div class="col-md-6">
 										<div class="single_blogs_img">
