--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 									
 									<div class="col-md-6">
 										<div class="single_blogs_img">
-											<img src="assets/images/vlog/code.jpeg" alt="" />
+											<img src="assets/images/vlog/code.jpg" alt="" />
 											<div class="dates"><span>28</span> Nov 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
