--- a/index.html
+++ b/index.html
@@ -333,14 +333,14 @@
 							<div class="main_features_content">
 								<div class="single_features">
 									<div class="col-md-6">
-										<!--div class="single_blogs_img">
-											<img src="assets/images/vlog/adara.jpg" alt="" />
-											<div class="dates"><span>29</span> Jul</div>
+										<div class="single_blogs_img">
+											<img src="assets/images/vlog/letmehack.jpg" alt="" />
+											<div class="dates"><span> 01</span> Feb 2020</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.instagram.com/p/BlyY5ABACSd/">Adara Kanda Night Camp</a></h5>
+											<h5><a href="https://www.linkedin.com/feed/update/urn:li:activity:6630138865577484288/" target="_blank">LetMe Hack v2.0</a></h5>
 											<p></p>
-										</div-->
+										</div>
 									</div>
 									
 									<div class="col-md-6">
@@ -349,7 +349,7 @@
 											<div class="dates"><span>28</span> Nov 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.linkedin.com/posts/janidu-jayasanka-36435a145_codenightv3-hacking-lifestyletips-activity-6607148290083512320-SEn8">Code Night 2019</a></h5>
+											<h5><a href="https://www.linkedin.com/posts/janidu-jayasanka-36435a145_codenightv3-hacking-lifestyletips-activity-6607148290083512320-SEn8" target="_blank">Code Night 2019</a></h5>
 											<p></p>
 										</div>
 									</div>
@@ -361,7 +361,7 @@
 											<div class="dates"><span>29</span> Jul 2018</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.instagram.com/p/BlyY5ABACSd/">Adara Kanda Night Camp</a></h5>
+											<h5><a href="https://www.instagram.com/p/BlyY5ABACSd/" target="_blank">Adara Kanda Night Camp</a></h5>
 											<p></p>
 										</div>
 									</div>
@@ -372,7 +372,7 @@
 											<div class="dates"><span>28</span> Dec 2018</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.instagram.com/p/Br5uWinhsxk/">Habarana Tour</a></h5>
+											<h5><a href="https://www.instagram.com/p/Br5uWinhsxk/" target="_blank">Habarana Tour</a></h5>
 											<p></p>
 										</div>
 									</div>
@@ -385,7 +385,7 @@
 											<div class="dates"><span>28</span> Feb 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://youtu.be/LhH1wiSo1mo">Virtual Reality Event</a></h5>
+											<h5><a href="https://youtu.be/LhH1wiSo1mo" target="_blank">Virtual Reality Event</a></h5>
 											<p></p>
 										</div>
 									</div>
@@ -396,7 +396,7 @@
 											<div class="dates"><span>22</span> Mar 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.instagram.com/p/BvT5E8HB7gu/">Creative Software Company Field Visit</a></h5>
+											<h5><a href="https://www.instagram.com/p/BvT5E8HB7gu/" target="_blank">Creative Software Company Field Visit</a></h5>
 											<p></p>
 										</div>
 									</div>
@@ -410,7 +410,7 @@
 											<div class="dates"><span>26</span> Mar 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.instagram.com/p/BvhIJmVhq6A/">Google Cloud Jam SUSL</a></h5>
+											<h5><a href="https://www.instagram.com/p/BvhIJmVhq6A/" target="_blank">Google Cloud Jam SUSL</a></h5>
 											<p></p>
 										</div>
 									</div>
@@ -421,7 +421,7 @@
 											<div class="dates"><span>27</span> Mar 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.instagram.com/p/BvoWLayBUVS/">Venture Frontier Lanka<br> Entrepreneurship Caravan</a></h5>
+											<h5><a href="https://www.instagram.com/p/BvoWLayBUVS/" target="_blank">Venture Frontier Lanka<br> Entrepreneurship Caravan</a></h5>
 											<p></p>
 										</div>
 									</div>
@@ -476,7 +476,7 @@
 											<div class="dates"><span>08</span> Dec 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://medium.com/@johnnyluther96/are-all-vehicle-manufactures-going-to-next-era-ff4ebefe90d4?source=friends_link&sk=ef4df2c2e6c69d4919dc9b6d23b0800d">Are All Vehicle Manufactures Going To Next Era?</a></h5>
+											<h5><a href="https://medium.com/@johnnyluther96/are-all-vehicle-manufactures-going-to-next-era-ff4ebefe90d4?source=friends_link&sk=ef4df2c2e6c69d4919dc9b6d23b0800d" target="_blank">Are All Vehicle Manufactures Going To Next Era?</a></h5>
 											<p>As we all know Tesla company taking huge turn in automobile industry therefore all other companies should be give good compete. From that case lot of European and American companies tries to release electric vehicle.here we can see few example for that silent competition....</p>
 										</div>
 									</div>
@@ -491,7 +491,7 @@
 											<div class="dates"><span>20</span> Aug 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://medium.com/@johnnyluther96/a-new-phishing-kit-on-the-dark-net-56778859a7fe?source=friends_link&sk=006cd52c8f9e75b8ebc858bf36d9c042">A New Phishing Kit on the Dark Net</a></h5>
+											<h5><a href="https://medium.com/@johnnyluther96/a-new-phishing-kit-on-the-dark-net-56778859a7fe?source=friends_link&sk=006cd52c8f9e75b8ebc858bf36d9c042" target="_blank">A New Phishing Kit on the Dark Net</a></h5>
 											<p>Today I’m going to introduce new generation phishing kit that is call [A]pache’s phishing kit. Below we will show how [A]pache’s phishing kit works and how it is used to carry out online scamming operations...</p>
 										</div>
 									</div>
@@ -504,7 +504,7 @@
 											<div class="dates"><span>09</span> Aug 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://medium.com/@johnnyluther96/penetration-testing-hacking-tools-list-for-hackers-e1eb4e4cc507?source=friends_link&sk=c3225b3706c74f0fbb346270f06f7081">Penetration Testing & Hacking Tools List for Hackers</a></h5>
+											<h5><a href="https://medium.com/@johnnyluther96/penetration-testing-hacking-tools-list-for-hackers-e1eb4e4cc507?source=friends_link&sk=c3225b3706c74f0fbb346270f06f7081" target="_blank">Penetration Testing & Hacking Tools List for Hackers</a></h5>
 											<p>#Hacking Tools...</p>
 										</div>
 									</div>
@@ -519,7 +519,7 @@
 											<div class="dates"><span>03</span> Jul 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://medium.com/@johnnyluther96/what-is-intel-xe-graphics-card-3309b811e7e2?source=friends_link&sk=7289b651bc0a4214a5f2c6329183c9b7">What is Intel Xe Graphics Card?</a></h5>
+											<h5><a href="https://medium.com/@johnnyluther96/what-is-intel-xe-graphics-card-3309b811e7e2?source=friends_link&sk=7289b651bc0a4214a5f2c6329183c9b7" target="_blank">What is Intel Xe Graphics Card?</a></h5>
 											<p>It’s been a wild year in the graphics space, topped by Intel’s announcement that it has started a new program to launch graphics cards for both gaming and enterprise markets (purportedly code-named Arctic Sound)...</p>
 										</div>
 									</div>
@@ -532,7 +532,7 @@
 											<div class="dates"><span>26</span> Jun 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://medium.com/@johnnyluther96/i-have-selected-to-sef-scholarx-mentoring-program-fee21dc99661?source=friends_link&sk=66c1885d6c1d32f5dfa5d449df72a626">U.S. launched cyber-attacks on Iranian military computer systems</a></h5>
+											<h5><a href="https://medium.com/@johnnyluther96/i-have-selected-to-sef-scholarx-mentoring-program-fee21dc99661?source=friends_link&sk=66c1885d6c1d32f5dfa5d449df72a626" target="_blank">U.S. launched cyber-attacks on Iranian military computer systems</a></h5>
 											<p>The U.S. Cyber Command reportedly launched a cyber-attack against Iran last Thursday;  response to the downing of an American surveillance drone...</p>
 										</div>
 									</div>
@@ -546,7 +546,7 @@
 											<div class="dates"><span>09</span> Jun 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://medium.com/@johnnyluther96/i-met-dr-jeewika-ranaweera-dfaa207c489b?source=friends_link&sk=4609e69ac134d6ca381de6a9b11c1bf9">First meeting with Dr. Jeewika</a></h5>
+											<h5><a href="https://medium.com/@johnnyluther96/i-met-dr-jeewika-ranaweera-dfaa207c489b?source=friends_link&sk=4609e69ac134d6ca381de6a9b11c1bf9" target="_blank">First meeting with Dr. Jeewika</a></h5>
 											<p>Hey guys, I’m back to share my experience on ScholarX mentoring program. Last time I mentioned that I was hoping to meet Dr. Jeewika Ranaweera, who is my mentor. I met her last Thursday(6th of June )...</p>
 										</div>
 									</div>
@@ -559,7 +559,7 @@
 											<div class="dates"><span>04</span> Jun 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://medium.com/@johnnyluther96/i-have-selected-to-sef-scholarx-mentoring-program-fee21dc99661?source=friends_link&sk=66c1885d6c1d32f5dfa5d449df72a626">I Got Selected To SEF ScholarX Mentoring Program</a></h5>
+											<h5><a href="https://medium.com/@johnnyluther96/i-have-selected-to-sef-scholarx-mentoring-program-fee21dc99661?source=friends_link&sk=66c1885d6c1d32f5dfa5d449df72a626" target="_blank">I Got Selected To SEF ScholarX Mentoring Program</a></h5>
 											<p>TAs a Sri Lankan state university undergraduate, I have a big dream to reach great heights in my career. With the education system in Sri Lanka and the difference of the facility distribution throughout the country, it’s bit difficult to achieve higher goals by only keeping trust about it...</p>
 										</div>
 									</div>
@@ -574,7 +574,7 @@
 											<div class="dates"><span>04</span> Jun 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://medium.com/@johnnyluther96/how-to-fix-operating-system-not-found-error-64f39b5b398b?source=friends_link&sk=2d6370c8a1fc1c8d6789b2101248f185">How To Fix Operating System Not Found error</a></h5>
+											<h5><a href="https://medium.com/@johnnyluther96/how-to-fix-operating-system-not-found-error-64f39b5b398b?source=friends_link&sk=2d6370c8a1fc1c8d6789b2101248f185" target="_blank">How To Fix Operating System Not Found error</a></h5>
 											<p>Fist of all ,I have to say this only for Windows base operating systems(7/vista/8/8.1/10).If you know your computer not formated or anything else happen ; That means your computer still have OS inside but not in the active mode...</p>
 										</div>
 									</div>
@@ -587,7 +587,7 @@
 											<div class="dates"><span>04</span> Jun 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://medium.com/@johnnyluther96/huawei-confirmed-that-it-is-preparing-their-plan-b-os-191affb5b1ab?source=friends_link&sk=374dee6d8672ddb085a623baa6482699">Huawei confirmed that it is preparing their plan B</a></h5>
+											<h5><a href="https://medium.com/@johnnyluther96/huawei-confirmed-that-it-is-preparing-their-plan-b-os-191affb5b1ab?source=friends_link&sk=374dee6d8672ddb085a623baa6482699" target="_blank">Huawei confirmed that it is preparing their plan B</a></h5>
 											<p>This was Huawei Central news before few weeks. That was good news for all huawei users and all other people because until this time there is no mobile OS to fight with Android which is Google providing.In that case Google took their ownership to control all other mobile industries...</p>
 										</div>
 									</div>
@@ -602,7 +602,7 @@
 											<div class="dates"><span>14</span> Jan 2019</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.linkedin.com/pulse/new-trending-game-secret-neighbor-janidu-jayasanka/">New Trending Game-Secret Neighbor</a></h5>
+											<h5><a href="https://www.linkedin.com/pulse/new-trending-game-secret-neighbor-janidu-jayasanka/" target="_blank">New Trending Game-Secret Neighbor</a></h5>
 											<p>ඒත් අද කියන්න යන්නෙ pubg වලට වඩා ඇඩ්වාන්ස් multiplay game එකක් ගැන බොහෝ දුරට දැනටමත් pubg සහ free fire වලට තියෙන තැන උදුරාගනිමින් තියෙනවා .......</p>
 										</div>
 									</div>
@@ -615,7 +615,7 @@
 											<div class="dates"><span>04</span> Oct 2018</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.linkedin.com/pulse/mobile-application-development-janidu-jayasanka/">Mobile Application Development</a></h5>
+											<h5><a href="https://www.linkedin.com/pulse/mobile-application-development-janidu-jayasanka/" target="_blank">Mobile Application Development</a></h5>
 											<p>Mobile app development is the act or process by which a mobile app is developed for mobile devices...</p>
 										</div>
 									</div>
@@ -630,7 +630,7 @@
 											<div class="dates"><span>13</span> Sep 2018</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.linkedin.com/pulse/galaxy-x-first-smart-phone-portable-display-janidu-jayasanka/">Galaxy X ( The First Smart Phone with portable display )</a></h5>
+											<h5><a href="https://www.linkedin.com/pulse/galaxy-x-first-smart-phone-portable-display-janidu-jayasanka/" target="_blank">Galaxy X ( The First Smart Phone with portable display )</a></h5>
 											<p>ආයුබෝවන් යාළුවනේ , සාදරයෙන් පිළිගන්නවා මගේ හතරවෙනි postඑකට ,මේකෙදි අපි කතා කරන්න යන්නේ අපි හැමෝම දන්න Phone company එකක release වෙන්න තියෙන Smart phone එකක් ගැන....</p>
 										</div>
 									</div>
@@ -643,7 +643,7 @@
 											<div class="dates"><span>31</span> Aug 2018</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.linkedin.com/pulse/bugatti-%E0%B6%B4%E0%B7%80%E0%B6%BD-%E0%B6%85%E0%B6%BD%E0%B6%AD%E0%B6%B8-%E0%B7%83%E0%B6%B8%E0%B6%A2%E0%B6%9A%E0%B6%BA-janidu-jayasanka/">BUGATTI පවුලේ අලුත්ම සාමාජිකයා - BUGATTI Divo</a></h5>
+											<h5><a href="https://www.linkedin.com/pulse/bugatti-%E0%B6%B4%E0%B7%80%E0%B6%BD-%E0%B6%85%E0%B6%BD%E0%B6%AD%E0%B6%B8-%E0%B7%83%E0%B6%B8%E0%B6%A2%E0%B6%9A%E0%B6%BA-janidu-jayasanka/" target="_blank">BUGATTI පවුලේ අලුත්ම සාමාජිකයා - BUGATTI Divo</a></h5>
 											<p> අද මම කතා කරන්න යන්නේ ටිකක් වෙනස් Topic එකක් ගැන ඒ තමයි ප්‍රංශ සමාගමක් වන BUGATTI පවුලේ අලුත්ම සාමාජිකයා BUGATTI Divo ගැන...</p>
 										</div>
 									</div>
@@ -659,7 +659,7 @@
 											<div class="dates"><span>21</span> Aug 2018</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="">Modern Trend Of Games-Battle Royal Games</a></h5>
+											<h5><a href=" target="_blank"">Modern Trend Of Games-Battle Royal Games</a></h5>
 											<p>urvival Games ගැන කතා කරද්දී අපිට මුලින්ම මුණගැහෙන්නේ PUBG කියන ලෝකප්‍රසිද්ද Game එක...</p>
 										</div>
 									</div>
@@ -672,7 +672,7 @@
 											<div class="dates"><span>19</span> Aug 2018</div>
 										</div>
 										<div class="single_blogs_deatels">
-											<h5><a href="https://www.linkedin.com/pulse/how-install-operating-system-using-bootable-usb-drive-jayasanka/">How to Install Operating System Using Bootable USB Drive</a></h5>
+											<h5><a href="https://www.linkedin.com/pulse/how-install-operating-system-using-bootable-usb-drive-jayasanka/" target="_blank">How to Install Operating System Using Bootable USB Drive</a></h5>
 											<p>එත් අද මන් කියල දෙන්න යන්නේ කිසිම tool එකක් භාවිතා නොකර windows වල තියන command prompt එක හරහා බූටබල් pen එකක් සකස් කරගන්නා ආකාරයි...</p>
 										</div>
 									</div>
