--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 									<i class="fa fa-quote-right"></i>
 									<p>I finished my academics in computing and information systems at the Sabaragamuwa University of Sri Lanka. Currently, I'm an open source developer and a tech geek who always strives for new technologies and trends. I'm enthusiastic, decisive, and conviction-filled, and also have a proactive attitude and find positive ways to stimulate and engage with people. I am interested in software development technologies, configuration technologies, and cloud technologies. I am always looking to sharpen my knowledge and skills and move forward with the company.</p>
 								</div>
-								<div class="about_bottom_content">
+								<!--div class="about_bottom_content">
 									<div class="about_bottom_title">
 										<h4>My Skills</h4>
 									</div>
@@ -118,7 +118,7 @@
 									<a href=""><img src="assets/images/ab3.png" alt="" /></a>
 									<a href=""><img src="assets/images/ab4.png" alt="" /></a>
 									<a href=""><img src="assets/images/ab5.png" alt="" /></a>
-								</div>
+								</div-->
 							</div>
 							
 						</div>
