--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<h2>Hello!</h2>
 							<div class="separator"></div>
 							<p>I'm <i><b>Janidu Jayasanka</b></i>.</p>
-							<a href="https://1drv.ms/b/s!Aq5q9prmEGvXiB3PrFQK0stAILyN?e=wP0ETm" target="_blank" class="btn btn-lg">Download CV</a>
+							<a href="https://1drv.ms/b/s!Aq5q9prmEGvXjTNNH2sab-ZephWB?e=XTOqf6" target="_blank" class="btn btn-lg">Download CV</a>
 						</div>
 						  
 						
